src/test/deca/syntax/invalid/float_plusieurs_virgules.deca
//  Description :
//            flottant ayant plusieurs virgules
//
// Résultat:
//mismatched input '1234.1234' expecting IDENT
//
{
1234.1234.1234.1234
}